# instrumental-data-processor

./: README.md  pyproject.toml
instrumental_data_analyzer/: __init__.py
instrumental_data_analyzer.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
instrumental_data_analyzer/abstracts/: __init__.py  matrix.py  signal_1d.py
instrumental_data_analyzer/concretes/: __init__.py  absorb_spec.py  chrom.py  imp_spec.py  multi_well_plates.py
instrumental_data_analyzer/instruments/: __init__.py  chemstation_archive.py  chemstation_processor.py  multiscan_fc.py  nanodrop_utils.py  unicorn_archive.py  unicorn_processor.py
instrumental_data_analyzer/utils/: path_utils.py  transform_utils.py
instrumental_data_processor/: __init__.py  path_utils.py
instrumental_data_processor/abstracts/: __init__.py  signal.py  signal_1d.py  signal_1d_collection.py  signal_collection.py
instrumental_data_processor/concretes/: __init__.py  absorb_spec.py  chrom.py
instrumental_data_processor/instruments/: __init__.py  chemstation_archive.py  chemstation_processor.py  nanodrop.py  unicorn_processor.py
instrumental_data_processor/utils/: transform_utils.py
tests/: abstracts_test.py  instruments_test.py  test_abstracts_test.py
tests/data/: UV_Vis_1.csv  chromatography_UV_1.csv  fraction_1.csv  fraction_2.csv  table_1.csv  table_1_formatted.csv  table_2.csv
tests/data/chemstation_chromatography_1/: 214.CSV  280.CSV  300.CSV  400.CSV  420.CSV  Fraction.csv
